security && lot of stuf

--- a/templates/product_detail/index.html.twig
+++ b/templates/product_detail/index.html.twig
@@ -95,41 +95,16 @@
               <button class="tab active">
                 Description
               </button>
-              <button class="tab">
+              {# <button class="tab">
                 Informations Additionnelles
-              </button>
+              </button> #}
             </div>
             <div class="tab-content desc" id="tab1">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt, non voluptate maxime illo reiciendis laborum sunt
-                corrupti et impedit provident voluptatum pariatur dignissimos,
-                consequatur excepturi qui quasi dolorem minima reprehenderit!
-                Consequatur excepturi enim quaerat. Impedit fugiat quis nobis
-                eius rem inventore, culpa corrupti reprehenderit corporis
-                debitis sed quidem aspernatur. Odio, dolores libero at provident
-                totam consectetur dolor magni minus obcaecati! Praesentium ipsa
-                quae ullam suscipit, cumque doloribus laudantium ut tenetur non
-                quos iste velit dolore nemo inventore, iure hic quam repellendus
-                repudiandae ducimus minima? Dolore incidunt consequuntur aut qui
-                at.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt, non voluptate maxime illo reiciendis laborum sunt
-                corrupti et impedit provident voluptatum pariatur dignissimos,
-                consequatur excepturi qui quasi dolorem minima reprehenderit!
-                Consequatur excepturi enim quaerat. Impedit fugiat quis nobis
-                eius rem inventore, culpa corrupti reprehenderit corporis
-                debitis sed quidem aspernatur. Odio, dolores libero at provident
-                totam consectetur dolor magni minus obcaecati! Praesentium ipsa
-                quae ullam suscipit, cumque doloribus laudantium ut tenetur non
-                quos iste velit dolore nemo inventore, iure hic quam repellendus
-                repudiandae ducimus minima? Dolore incidunt consequuntur aut qui
-                at.
+                {{ product.description|raw }}
               </p>
             </div>
-            <div class="tab-content" id="tab2" style="display: none">
+            {# <div class="tab-content" id="tab2" style="display: none">
               <div class="product-single__addtional-info">
                 <div class="item">
                   <label class="addtional-info-label">Taille</label>
@@ -140,7 +115,7 @@
                   <span>Noire, Orange, Blanc</span>
                 </div>
               </div>
-            </div>
+            </div> #}
           </div>
         </div>
       </section>
