--- a/templates/shop/index.html.twig
+++ b/templates/shop/index.html.twig
@@ -57,17 +57,21 @@
                 <div class="border rounded-lg overflow-hidden">
                     <!--SHOWCASE BANNER-->
                     <div class="relative showcase">
-                      <img
-                        src="{{ asset('/images/products/') }}{{ item.getImages()[0].imageName }}"
-                        alt="Mens Winter Leathers Jackets"
-                        width="300"
-                        class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
-                      />
-                      <img
-                        src="{{ asset('/images/products/') }}{{ item.getImages()[1].imageName }}"
-                        alt="Mens Winter Leathers Jackets"
-                        class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
-                      />
+                      <a href="{{ path('app_product_detail', {'id': item.id}) }}">
+                        <img
+                          src="{{ asset('/images/products/') }}{{ item.getImages()[0].imageName }}"
+                          alt="Mens Winter Leathers Jackets"
+                          width="300"
+                          class="w-full h-full object-cover relative z-1 transform transition-transform duration-300 ease-in-out default"
+                        />
+                      </a>
+                      <a href="{{ path('app_product_detail', {'id': item.id}) }}">
+                        <img
+                          src="{{ asset('/images/products/') }}{{ item.getImages()[1].imageName }}"
+                          alt="Mens Winter Leathers Jackets"
+                          class="w-full h-full object-cover absolute top-0 left-0 z-2 opacity-0 hover:opacity-1 transform transition-transform duration-300 ease-in-out hover"
+                        />
+                      </a>
                       {% if (item.discount != 0 and item.discount != null) %}
                         <p
                           class="absolute top-2 left-2 bg-red-500 text-white px-2 py-1 text-xs font-bold rounded"
@@ -89,7 +93,7 @@
                     </div>
 
                     <div class="p-4">
-                      <a href="#" class="block text-gray-500 text-sm mb-2">Costume</a>
+                      <span href="#" class="block text-gray-500 text-sm mb-2">Costume</span>
 
                       <a href="{{ path('app_product_detail', {'id': item.id}) }}">
                         <h3 class="text-lg font-semibold">{{ item.name }}</h3>
