setting up google auth

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>AlAmin Desingn - {% block title %}{% endblock %}</title>
-        <link rel="icon" href="{{ asset('/images/site-icon.png') }}">
-        {# <link rel="icon" href="{{ asset('/images/' ~ informations.address) }}"> #}
+        <link rel="icon" href="{{ asset('/images/upload/' ~ informations.siteIcon) }}">
 
         <link
             rel="stylesheet"
