--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,7 @@
         {% if error %}
             <div class="p-3 bg-red-300">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
-        <form method="post" class="w-full flex flex-col items-center justify-center gap-8">
+        <form method="post" class="w-full flex flex-col items-center justify-center gap-8 mb-4">
           <input
             type="email"
             value="{{ last_username }}"
@@ -50,12 +50,12 @@
         </form>
 
         <div class="mt-12 mb-8 grid space-y-4">
-            <button class="group relative flex h-11 items-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-white dark:before:bg-gray-700 dark:before:border-gray-600 before:border before:border-gray-200 before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 disabled:before:bg-gray-300 disabled:before:scale-100">
+            <a href="{{ path('auth_oauth_login', {service: 'google'}) }}" class="group relative flex h-11 items-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-white dark:before:bg-gray-700 dark:before:border-gray-600 before:border before:border-gray-200 before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 disabled:before:bg-gray-300 disabled:before:scale-100">
               <span class="w-full relative flex justify-center items-center gap-3 text-base font-medium text-gray-600 dark:text-gray-200">
                 <img src="{{ asset('images/google-icon.svg') }}" class="absolute left-0 w-5 h-5" alt="google logo" />
                 <span>Se connecter avec google</span>
               </span>
-            </button>
+            </a>
         </div>
 
         <div class="flex items-center justify-between my-5">
