--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -32,7 +32,7 @@
           >
             <ion-icon name="call"></ion-icon>
             <h3 class="text-sm font-semibold">Appelez nous !</h3>
-            <span>+221 77 168 92 43</span>
+            <span>+221 76 140 59 14</span>
           </div>
           <hr />
           <div
@@ -40,7 +40,7 @@
           >
             <ion-icon name="mail"></ion-icon>
             <h3 class="text-sm font-semibold">Email</h3>
-            <span>info@contact.com</span>
+            <span>contact@alaminedesign.com</span>
           </div>
         </div>
 
