--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>AlAmin Desingn - {% block title %}{% endblock %}</title>
+        <title>Al Amine Design - {% block title %}{% endblock %}</title>
         <link rel="icon" href="{{ asset('/images/upload/' ~ informations.siteIcon) }}">
 
         <link
