--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -79,7 +79,7 @@
         {% endif %}
       </div>
       <div class="flex items-center justify-center my-8 w-full h-[200px]">
-          <a href="{{ path('app_shop') }}" class="w-max bg-black text-white px-8 py-2 my-4">En savoir plus</a>
+          <a href="{{ path('app_shop') }}" class="w-max bg-black text-white px-8 py-2 my-4">Voir plus de produits</a>
       </div>
     </div>
 {% endblock %}
