--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -5,7 +5,7 @@
     <div class="mx-auto px-4">
         <div class="flex flex-wrap justify-between">
             <div class="w-full flex flex-col md:items-center gap-5 md:w-1/3 mb-6 md:mb-0">
-                <h3 class="text-xl font-semibold mb-4">Contactez-Nous</h3>
+                <h3 class="text-xl font-semibold mb-4">Contactez-nous</h3>
                 <p class="">{{ informations.address }}</p>
                 <p class="">Email: {{ informations.email }}</p>
                 <p class="">Telephone: {{ informations.phone }}</p>
@@ -20,7 +20,7 @@
                     <a href="{{ path('app_shop') }}" class="hover:text-slate-500">Boutique</a>
                     </li>
                     <li class="mb-2">
-                    <a href="{{ path('app_about') }}" class="hover:text-slate-500">Apropos</a>
+                    <a href="{{ path('app_about') }}" class="hover:text-slate-500">A propos</a>
                     </li>
                     <li>
                     <a href="{{ path('app_contact') }}" class="hover:text-slate-500">Contact</a>
@@ -28,7 +28,7 @@
                 </ul>
             </div>
             <div class="w-full flex flex-col md:items-center gap-5 md:w-1/3">
-                <h3 class="text-xl font-semibold mb-4">Suivez Nous</h3>
+                <h3 class="text-xl font-semibold mb-4">Suivez-nous</h3>
                 <div class="flex flex-col gap-4">
                     {% if socialMedia %}
                         {% for item in socialMedia %}
