--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -43,7 +43,7 @@
         </div>
         <div class="mt-8 text-center">
             <p class="text-spanish-gray">
-            &copy; 2024 {{ informations.siteName }}. Tout Droit Reserve.
+            &copy; 2024 {{ informations.siteName }}. Tous droits réservés.
             </p>
         </div>
     </div>
