--- a/templates/mail/invoice-mail.html.twig
+++ b/templates/mail/invoice-mail.html.twig
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <p>Bonjour cher(e), client merci d'avoir commande chez AlAmin Design.</p>
+    <p>Bonjour cher(e), client merci d'avoir commande chez Al Amine Design.</p>
     <p>Vous pouvez voir ci-dessous les details de votre commande et telecharger ou imprimer la facture.</p>
     
     <h3 class="mt-2">Commande n°{{ order.id }}</h3>
